# cognitive-twin-os

./: .env.example  .gitattributes  .gitignore  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: ci.yml
DATA/: deep-research-report (1).md  deep-research-report (2).md  deep-research-report (3).md  deep-research-report (4).md  deep-research-report.md
contracts/decision/: decision_request.schema.json  decision_response.schema.json
contracts/events/: episode.schema.json  event.schema.json
contracts/ingest/: ingest_batch.schema.json  ingest_result.schema.json
contracts/memory/: deprecated_structured_retrieval_response.schema.json  episode_build_request.schema.json  episode_build_result.schema.json  retrieval_request.schema.json  retrieval_response.schema.json
contracts/policy/: episode_policy_evaluation.schema.json  policy_request.schema.json  policy_response.schema.json
contracts/traces/: operation_trace.schema.json
docs/: 00_product_brief.md  01_architecture.md  02_contracts.md  03_memory_model.md  04_policy_model.md  05_evaluation_plan.md  06_codex_cursor_workflow.md
src/cognitive_twin/: __init__.py  episode_builder.py  episodes.py  errors.py  events.py  hashing.py  ids.py  (+11 more)
tests/: conftest.py  test_dependency_boundaries.py  test_episode_builder.py  test_episode_model.py  test_event_model.py  test_event_store.py  test_ingest.py  test_io_roundtrip.py  test_json_schemas.py  test_jsonl_store.py  test_policy_engine.py  test_policy_retrieval.py  test_release_api.py  test_retrieval.py  test_store_snapshots.py  test_trace_model.py  test_trace_store.py
